# SDL2-Game

./: CMakeLists.txt  README.md
include/: Animation.hpp  AssetManager.hpp  AttackCommand.hpp  Coin.hpp  Command.hpp  Enemy.hpp  GameConfig.hpp  GameData.hpp  GameOverState.hpp  HUD.hpp  InputManager.hpp  JumpCommand.hpp  MenuState.hpp  MoveLeftCommand.hpp  MoveRightCommand.hpp  PauseState.hpp  PlayState.hpp  Player.hpp  State.hpp  StateMachine.hpp  Trophy.hpp  Weapon.hpp
src/: Animation.cpp  AssetManager.cpp  AttackCommand.cpp  Coin.cpp  Enemy.cpp  GameOverState.cpp  HUD.cpp  InputManager.cpp  JumpCommand.cpp  MenuState.cpp  MoveLeftCommand.cpp  MoveRightCommand.cpp  PauseState.cpp  PlayState.cpp  Player.cpp  StateMachine.cpp  Trophy.cpp  Weapon.cpp  main.cpp
